--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-/.phpunit.cache
 /node_modules
 /public/build
 /public/hot
@@ -17,3 +16,5 @@ yarn-error.log
 /.fleet
 /.idea
 /.vscode
+supervisord.log
+supervisord.pid
